--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=aryan
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 
